fixed how-to-use page spacing and texts

--- a/web/src/pages/how-to-use/styles.module.scss
+++ b/web/src/pages/how-to-use/styles.module.scss
@@ -1,7 +1,7 @@
 .usageSection {
 	background: var(--background);
 	section {
-		width: 60%;
+		width: 70%;
 		align-items: flex-start;
 		gap: 4rem;
 		> div {
